--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "author": "Breezewish",
     "description": "express-minify is an express middleware that automatically minify your javascript and css files.",
     "homepage": "https://github.com/breeswish/express-minify",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "main": "minify.js",
     "keywords": [
         "uglify",
@@ -19,6 +19,10 @@
     },
     "dependencies": {
         "uglifycss": "~0.0.5",
-        "uglify-js": "~2.2.5"
+        "uglify-js": "~2.2.5",
+        "less":"~1.3.3",
+        "node-sass":"~0.4.2",
+        "coffee-script":"~1.6.2",
+        "stylus":"~0.32.1"
     }
 }
