--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "url": "git://github.com/breeswish/express-minify.git"
     },
     "dependencies": {
-        "uglifycss": "~0.0.5",
+        "cssmin": "~0.4.1",
         "uglify-js": "~2.2.5",
         "less":"~1.3.3",
         "node-sass":"~0.4.2",
