--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "author": "Breezewish",
     "description": "express-minify is an express middleware that automatically minify your javascript and css files.",
     "homepage": "https://github.com/breeswish/express-minify",
-    "version": "0.0.9",
+    "version": "0.0.10",
     "main": "minify.js",
     "keywords": [
         "uglify",
@@ -11,7 +11,7 @@
         "express"
     ],
     "engines": {
-        "node": ">=0.4.0"
+        "node": ">= 0.8.0"
     },
     "repository": {
         "type": "git",
@@ -23,6 +23,7 @@
         "less":"~1.3.3",
         "node-sass":"~0.4.2",
         "coffee-script":"~1.6.2",
-        "stylus":"~0.32.1"
+        "stylus":"~0.32.1",
+        "on-headers":"0.0.0"
     }
 }
