--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "mocha": "~1.20.1",
         "supertest": "~0.13.0",
         "should": "~4.0.1",
-        "async": "~0.9.0"
+        "async": "~0.9.0",
+        "compression": "~1.0.8"
     },
     "scripts": {
         "test": "mocha --check-leaks --reporter dot"
