--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-    "name": "express-minify",
-    "author": "Breezewish",
-    "description": "An express middleware to automatically minify and cache your javascript and css files.",
-    "homepage": "https://github.com/breeswish/express-minify",
-    "version": "0.0.10",
-    "main": "minify.js",
-    "keywords": [
-        "uglify",
-        "minify",
-        "express"
-    ],
-    "engines": {
-        "node": ">= 0.8.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/breeswish/express-minify.git"
-    },
-    "dependencies": {
-        "cssmin": "~0.4.1",
-        "uglify-js": "~2.2.5",
-        "less":"~1.3.3",
-        "node-sass":"~0.4.2",
-        "coffee-script":"~1.6.2",
-        "stylus":"~0.32.1",
-        "on-headers":"0.0.0"
-    },
-    "devDependencies": {
-        "mocha": "~1.20.1",
-        "supertest": "~0.13.0",
-        "should": "~4.0.1",
-        "async": "~0.9.0",
-        "compression": "~1.0.8"
-    },
-    "scripts": {
-        "test": "mocha --check-leaks --reporter dot"
-    }
+  "name": "express-minify",
+  "author": "Breezewish",
+  "description": "An express middleware to automatically minify and cache your javascript and css files.",
+  "homepage": "https://github.com/breeswish/express-minify",
+  "version": "0.0.11",
+  "main": "minify.js",
+  "keywords": [
+    "uglify",
+    "minify",
+    "express"
+  ],
+  "engines": {
+    "node": ">= 0.8.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/breeswish/express-minify.git"
+  },
+  "dependencies": {
+    "coffee-script": "^1.7.1",
+    "cssmin": "^0.4.1",
+    "less": "^1.7.4",
+    "node-sass": "^0.9.3",
+    "on-headers": "^1.0.0",
+    "stylus": "^0.47.3",
+    "uglify-js": "^2.4.15"
+  },
+  "devDependencies": {
+    "mocha": "~1.20.1",
+    "supertest": "~0.13.0",
+    "should": "~4.0.1",
+    "async": "~0.9.0",
+    "compression": "~1.0.8"
+  },
+  "scripts": {
+    "test": "mocha --check-leaks --reporter dot"
+  }
 }
