--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Breezewish",
   "description": "An express middleware to automatically minify and cache your javascript and css files.",
   "homepage": "https://github.com/breeswish/express-minify",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "minify.js",
   "keywords": [
     "uglify",
@@ -18,20 +18,20 @@
     "url": "git://github.com/breeswish/express-minify.git"
   },
   "dependencies": {
-    "coffee-script": "^1.8.0",
+    "coffee-script": "^1.9.0",
     "cssmin": "^0.4.2",
-    "less": "^2.0.0",
-    "node-sass": "^1.2.3",
+    "less": "^2.4.0",
+    "node-sass": "^2.0.1",
     "on-headers": "^1.0.0",
-    "stylus": "^0.49.3",
-    "uglify-js": "^2.4.15"
+    "stylus": "^0.50.0",
+    "uglify-js": "^2.4.16"
   },
   "devDependencies": {
-    "mocha": "~1.20.1",
-    "supertest": "~0.13.0",
-    "should": "~4.0.1",
-    "async": "~0.9.0",
-    "compression": "~1.0.8"
+    "mocha": "^2.1.0",
+    "supertest": "^0.15.0",
+    "should": "^5.0.0",
+    "async": "^0.9.0",
+    "compression": "^1.4.0"
   },
   "scripts": {
     "test": "mocha --check-leaks --reporter dot"
