--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "coffee-script": "^1.9.0",
     "cssmin": "^0.4.2",
     "less": "^2.4.0",
+    "node-json-minify": "^0.1.3-a",
     "node-sass": "^2.0.1",
     "on-headers": "^1.0.0",
     "stylus": "^0.50.0",
