--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automatically minify and cache your javascript and css files.",
   "homepage": "https://github.com/SummerWish/express-minify",
   "license": "MIT",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "main": "index.js",
   "keywords": [
     "uglify",
@@ -19,20 +19,20 @@
     "url": "git://github.com/SummerWish/express-minify.git"
   },
   "dependencies": {
-    "cssmin": "^0.4.3",
+    "clean-css": "^4.1.7",
     "on-headers": "^1.0.1",
-    "uglify-js": "^2.6.1"
+    "uglify-js": "^3.0.28"
   },
   "devDependencies": {
-    "async": "^1.5.2",
-    "coffee-script": "^1.10.0",
-    "compression": "^1.6.0",
-    "less": "^2.5.3",
-    "mocha": "^2.3.4",
-    "node-sass": "^3.4.2",
-    "should": "^8.1.1",
-    "stylus": "^0.53.0",
-    "supertest": "^1.1.0"
+    "async": "^2.5.0",
+    "coffee-script": "^1.12.7",
+    "compression": "^1.7.0",
+    "less": "^2.7.2",
+    "mocha": "^3.5.0",
+    "node-sass": "^4.5.3",
+    "should": "^12.0.0",
+    "stylus": "^0.54.5",
+    "supertest": "^3.0.0"
   },
   "scripts": {
     "test": "mocha --check-leaks --reporter dot"
