--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
-  - "4.1"
-  - "4.0"
-  - "0.12"
-  - "0.11"
-  - "0.10"
-  - "iojs"
+  - 4
+  - 5
+  - 6
+  - 7
+  - 8
+  - node
+  - iojs
+  - lts/*
